--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <div class="hrMenu"></div>
     <section id="sectionZigZag">
-        <img id="imgZigZag" src="./img/download (1) 1.svg" alt="logo do SENAI azul">
+        <img id="imgZigZag" src="./img/logoSenaiAzul.svg" alt="logo do SENAI azul">
         <div id="divZigZag">
             <video id="videoZigZag" src="./video/maquinazigzag.mp4" controls loop preload ></video>
         </div>
