fiz a PORRA do HOME obs disig q eu nunca fiz

--- a/index.html
+++ b/index.html
@@ -6,18 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/styleReponsivel.css">
-    <title>Zig Zag</title>
+    <title>QRcode</title>
 </head>
-<body>
+<body id="homeBody">
     <header>
-        <a href="./index.html"><h1 id="headerZigZag">INICIO</h1></a>
+        <!-- <a href="./index.html"><h1 id="headerHome" class="headerMaquinas">INICIO</h1></a>-->
+        <a id="aImgInsta" href="https://www.instagram.com/expo_senai/" target="_blank"><img class="logoInstaSenai" src="./img/instagram 1.svg" alt="logo do instagram onde enviar para o insta do SENAI"></a> 
     </header>
-    <div class="hrMenu"></div>
-    <section id="sectionZigZag">
-        <img id="imgZigZag" src="./img/logoSenaiAZul.svg" alt="logo do SENAI azul">
-        <div id="divZigZag">
-            <video id="videoZigZag" src="./video/maquinazigzag.mp4" controls loop preload ></video>
+    <section id="sectionHomeBody">
+        <div id="divMaeDivsIcons">
+            <div class="divIconMenu">
+                <div class="divImgIcon">
+                    <img class="imgIcon" src="./img/iconMaquina001.svg" alt="icon de maquina de pesponto">
+                </div>
+                <div class="divP">   
+                    <p class="tagPicons">MAQUINA</p>
+                </div>
+            </div>
+            <div class="divIconMenu">
+                <div class="divImgIcon">
+                    <img class="imgIcon" src="./img/iconMaquina002.svg" alt="icon de maquina de pesponto">
+                </div>
+                <div class="divP">
+                    <p class="tagPicons">MAQUINA</p>
+                </div>
+            </div>
+            <div class="divIconMenu">
+                <div class="divImgIcon">
+                    <img class="imgIcon" src="./img/iconMaquina003.svg" alt="icon de maquina de pesponto">
+                </div>
+                <div class="divP">
+                    <p class="tagPicons">MAQUINA</p>
+                </div>
+            </div>
         </div>
+        <!--<div class="hrMenu"></div>-->
+        <div id="divHomeImg">
+            <img class="imgHome" src="./img/maquinaHome02.svg" alt="pessoal do curso de pesponto ">
+            <img class="imgHome" src="./img/maquinaHome01.svg" alt="maquina de pesponto" >
+            <br>
+            <img class="imgHome" id="imgDeBaixo" src="./img/maquinaHome03.svg" alt="maquina de pesponto">
+        </div>
+    
     </section>
 </body>
 </html>
