--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
     </header>
     <section id="sectionHomeBody">
         <div id="divMaeDivsIcons">
-            <div class="divIconMenu">
-                <div class="divImgIcon">
-                    <img class="imgIcon" src="./img/iconMaquina001.svg" alt="icon de maquina de pesponto">
+            <a href="./html/zigzag.html">
+                <div class="divIconMenu">
+                    <div class="divImgIcon">
+                        <img class="imgIcon" src="./img/iconMaquina001.svg" alt="icon de maquina de pesponto">
+                    </div>
+                    <div class="divP">   
+                        <p class="tagPicons">MAQUINA</p>
+                    </div>
                 </div>
-                <div class="divP">   
-                    <p class="tagPicons">MAQUINA</p>
-                </div>
-            </div>
+            </a>
             <div class="divIconMenu">
                 <div class="divImgIcon">
                     <img class="imgIcon" src="./img/iconMaquina002.svg" alt="icon de maquina de pesponto">
