--- a/html/zigzag.html
+++ b/html/zigzag.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/styleReponsivel.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/styleReponsivel.css">
     <title>Zig Zag</title>
 </head>
 <body>
     <header>
-        <a href="./index.html"><h1 class="headerMaquinas">INICIO</h1></a>
+        <a href="../index.html"><h1 class="headerMaquinas">INICIO</h1></a>
         <a href="https://www.instagram.com/expo_senai/" target="_blank"><img class="logoInstaSenai" src="./img/instagram 1.svg" alt="logo do instagram onde enviar para o insta do SENAI"></a>
     </header>
     <div class="hrMenu"></div>
     <section id="sectionZigZag">
-        <img id="imgZigZag" src="./img/logoSenaiAZul.svg" alt="logo do SENAI azul">
+        <img id="imgZigZag" src="../img/logoSenaiAZul.svg" alt="logo do SENAI azul">
         <div id="divZigZag">
-            <video id="videoZigZag" src="./video/maquinazigzag.mp4" controls loop preload ></video>
+            <video id="videoZigZag" src="../video/maquinazigzag.mp4" controls loop preload ></video>
         </div>
     </section>
 </body>
