--- a/html/zigzag.html
+++ b/html/zigzag.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <a href="../index.html"><h1 class="headerMaquinas">INICIO</h1></a>
-        <a href="https://www.instagram.com/expo_senai/" target="_blank"><img class="logoInstaSenai" src="./img/instagram 1.svg" alt="logo do instagram onde enviar para o insta do SENAI"></a>
+        <a href="https://www.instagram.com/expo_senai/" target="_blank"><img class="logoInstaSenai" src="../img/instagram 1.svg" alt="logo do instagram onde enviar para o insta do SENAI"></a>
     </header>
     <div class="hrMenu"></div>
     <section id="sectionZigZag">
