--- a/index.html
+++ b/index.html
@@ -15,31 +15,164 @@
     </header>
     <section id="sectionHomeBody">
         <div id="divMaeDivsIcons">
-            <a href="./html/zigzag.html">
-                <div class="divIconMenu">
-                    <div class="divImgIcon">
-                        <img class="imgIcon" src="./img/iconMaquina001.svg" alt="icon de maquina de pesponto">
+            <div class="divMenuClass">
+                <a href="./html/zigzag.html" target="_self">
+                    <div class="divIconMenu">
+                        <div class="divImgIcon">
+                            <img class="imgIcon" src="./img/iconMaquina001.svg" alt="icon de maquina de pesponto">
+                        </div>
+                        <div class="divP">   
+                            <p class="tagPicons">MAQUINA</p>
+                        </div>
                     </div>
-                    <div class="divP">   
-                        <p class="tagPicons">MAQUINA</p>
+                </a>
+                <a href="#" target="_self">
+                    <div class="divIconMenu">
+                        <div class="divImgIcon">
+                            <img class="imgIcon" src="./img/iconMaquina002.svg" alt="icon de maquina de pesponto">
+                        </div>
+                        <div class="divP">
+                            <p class="tagPicons">MAQUINA</p>
+                        </div>
                     </div>
-                </div>
-            </a>
-            <div class="divIconMenu">
-                <div class="divImgIcon">
-                    <img class="imgIcon" src="./img/iconMaquina002.svg" alt="icon de maquina de pesponto">
-                </div>
-                <div class="divP">
-                    <p class="tagPicons">MAQUINA</p>
-                </div>
+                </a>
+                <a href="#" target="_self">
+                    <div class="divIconMenu">
+                        <div class="divImgIcon">
+                            <img class="imgIcon" src="./img/iconMaquina003.svg" alt="icon de maquina de pesponto">
+                        </div>
+                        <div class="divP">
+                            <p class="tagPicons">MAQUINA</p>
+                        </div>
+                    </div>
+                </a>
+
+
+
+                <a href="#" target="_self">
+                    <div class="divIconMenu">
+                        <div class="divImgIcon">
+                            <img class="imgIcon" src="./img/iconMaquina004.svg" alt="icon de maquina de pesponto">
+                        </div>
+                        <div class="divP">
+                            <p class="tagPicons">MAQUINA</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#" target="_self">
+                    <div class="divIconMenu">
+                        <div class="divImgIcon">
+                            <img class="imgIcon" src="./img/iconMaquina005.svg" alt="icon de maquina de pesponto">
+                        </div>
+                        <div class="divP">
+                            <p class="tagPicons">MAQUINA</p>
+                        </div>
+                    </div>
+                </a>
             </div>
-            <div class="divIconMenu">
-                <div class="divImgIcon">
-                    <img class="imgIcon" src="./img/iconMaquina003.svg" alt="icon de maquina de pesponto">
-                </div>
-                <div class="divP">
-                    <p class="tagPicons">MAQUINA</p>
-                </div>
+            <div class="divMenuClass">
+                <a href="#" target="_self">
+                    <div class="divIconMenu">
+                        <div class="divImgIcon">
+                            <img class="imgIcon" src="./img/iconMaquina001.svg" alt="icon de maquina de pesponto">
+                        </div>
+                        <div class="divP">
+                            <p class="tagPicons">MAQUINA</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#" target="_self">
+                    <div class="divIconMenu">
+                        <div class="divImgIcon">
+                            <img class="imgIcon" src="./img/iconMaquina002.svg" alt="icon de maquina de pesponto">
+                        </div>
+                        <div class="divP">
+                            <p class="tagPicons">MAQUINA</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#" target="_self">
+                    <div class="divIconMenu">
+                        <div class="divImgIcon">
+                            <img class="imgIcon" src="./img/iconMaquina003.svg" alt="icon de maquina de pesponto">
+                        </div>
+                        <div class="divP">
+                            <p class="tagPicons">MAQUINA</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#" target="_self">
+                    <div class="divIconMenu">
+                        <div class="divImgIcon">
+                            <img class="imgIcon" src="./img/iconMaquina004.svg" alt="icon de maquina de pesponto">
+                        </div>
+                        <div class="divP">
+                            <p class="tagPicons">MAQUINA</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#" target="_self">
+                    <div class="divIconMenu">
+                        <div class="divImgIcon">
+                            <img class="imgIcon" src="./img/iconMaquina005.svg" alt="icon de maquina de pesponto">
+                        </div>
+                        <div class="divP">
+                            <p class="tagPicons">MAQUINA</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="divMenuClass">
+                <a href="#" target="_self">
+                    <div class="divIconMenu">
+                        <div class="divImgIcon">
+                            <img class="imgIcon" src="./img/iconMaquina001.svg" alt="icon de maquina de pesponto">
+                        </div>
+                        <div class="divP">
+                            <p class="tagPicons">MAQUINA</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#" target="_self">
+                    <div class="divIconMenu">
+                        <div class="divImgIcon">
+                            <img class="imgIcon" src="./img/iconMaquina002.svg" alt="icon de maquina de pesponto">
+                        </div>
+                        <div class="divP">
+                            <p class="tagPicons">MAQUINA</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#" target="_self">
+                    <div class="divIconMenu">
+                        <div class="divImgIcon">
+                            <img class="imgIcon" src="./img/iconMaquina003.svg" alt="icon de maquina de pesponto">
+                        </div>
+                        <div class="divP">
+                            <p class="tagPicons">MAQUINA</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#" target="_self">
+                    <div class="divIconMenu">
+                        <div class="divImgIcon">
+                            <img class="imgIcon" src="./img/iconMaquina004.svg" alt="icon de maquina de pesponto">
+                        </div>
+                        <div class="divP">
+                            <p class="tagPicons">MAQUINA</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#" target="_self">
+                    <div class="divIconMenu">
+                        <div class="divImgIcon">
+                            <img class="imgIcon" src="./img/iconMaquina005.svg" alt="icon de maquina de pesponto">
+                        </div>
+                        <div class="divP">
+                            <p class="tagPicons">MAQUINA</p>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
         <!--<div class="hrMenu"></div>-->
@@ -52,4 +185,4 @@
     
     </section>
 </body>
-</html>
+</html> <br>
