--- a/html/zigzag.html
+++ b/html/zigzag.html
@@ -14,10 +14,10 @@
         <a href="https://www.instagram.com/expo_senai/" target="_blank"><img class="logoInstaSenai" src="../img/instagram 1.svg" alt="logo do instagram onde enviar para o insta do SENAI"></a>
     </header>
     <div class="hrMenu"></div>
-    <section id="sectionZigZag">
-        <img id="imgZigZag" src="../img/logoSenaiAZul.svg" alt="logo do SENAI azul">
-        <div id="divZigZag">
-            <video id="videoZigZag" src="../video/maquinazigzag.mp4" controls loop preload ></video>
+    <section id="sectionMaquina">
+        <img id="imgMaquina" src="../img/logoSenaiAZul.svg" alt="logo do SENAI azul">
+        <div id="divMaquina">
+            <video id="videoMaquina" src="../video/maquinazigzag.mp4" controls loop preload ></video>
         </div>
     </section>
 </body>
