--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" target="_self">
+                <a href="MaquinaCosturaColunaAgulha02.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina005.svg" alt="icon de maquina de pesponto">
