--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="MaquinaCosturaColunaAgulha.html target="_self">
+                <a href="../html/MaquinaCosturaColunaAgulha.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina003.svg" alt="icon de maquina de pesponto">
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="MaquinaCosturaColunaAgulha02.html" target="_self">
+                <a href="../html/MaquinaCosturaColunaAgulha02.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina005.svg" alt="icon de maquina de pesponto">
