--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <div class="divP">
                             <p class="tagPicons">MAQUINA</p>
                         </div>
-                    2/div>
+                    </div>
                 </a>
                 <a href="./html/MaquinaCosturaColunaAgulha03.html"  target="_self">
                     <div class="divIconMenu">
