commit feito no SENAI

--- a/html/MaquinaCosturaColunaAgulha06.html
+++ b/html/MaquinaCosturaColunaAgulha06.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/styleReponsivel.css">
-    <title>Zig Zag</title>
+    <title>Maquina de Costura de Coluna uma Agulha</title>
 </head>
 <body>
     <header>
@@ -17,7 +17,7 @@
     <section class="sectionMaquina">
         <img class="imgMaquina" src="../img/logoSenaiAZul.svg" alt="logo do SENAI azul">
         <div class="divMaquina">
-            <video class="videoMaquina" src="../video/maquinazigzag.mp4" controls loop preload ></video>
+            <video class="videoMaquina" src="../videoMaquinas/videoMaquina11.mp4" controls loop preload ></video>
         </div>
     </section>
 </body>
