--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" target="_self">
+                <a href="./html/maquinDeBracoLivre01.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina003.svg" alt="icon de maquina de pesponto">
@@ -46,10 +46,7 @@
                         </div>
                     </div>
                 </a>
-
-
-
-                <a href="#" target="_self">
+                <a href=""MaquinaCosturaColunaAgulhaEletronica.html target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina004.svg" alt="icon de maquina de pesponto">
@@ -59,7 +56,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" target="_self">
+                <a href="./html/MaquinaCosturaColunaAgulha.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina005.svg" alt="icon de maquina de pesponto">
@@ -71,7 +68,7 @@
                 </a>
             </div>
             <div class="divMenuClass">
-                <a href="#" target="_self">
+                <a href="./html/MaquinaCosturaColunaAgulha02.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina001.svg" alt="icon de maquina de pesponto">
@@ -81,7 +78,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" target="_self">
+                <a href="./html/MaquinaCosturaColunaAgulha03.html"  target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina002.svg" alt="icon de maquina de pesponto">
@@ -91,7 +88,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" target="_self">
+                <a href="./html/MaquinaCosturaColunaAgulha04.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina003.svg" alt="icon de maquina de pesponto">
@@ -101,7 +98,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" target="_self">
+                <a href="./html/MaquinaCosturaColunaAgulha05.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina004.svg" alt="icon de maquina de pesponto">
@@ -111,7 +108,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" target="_self">
+                <a href="./html/MaquinaCosturaColunaAgulha06.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina005.svg" alt="icon de maquina de pesponto">
@@ -123,7 +120,7 @@
                 </a>
             </div>
             <div class="divMenuClass">
-                <a href="#" target="_self">
+                <a href="./html/MaquinaCosturaColunaAgulha07.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina001.svg" alt="icon de maquina de pesponto">
@@ -133,7 +130,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" target="_self">
+                <a href="./html/MaquinaCosturaColunaAgulha08.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina002.svg" alt="icon de maquina de pesponto">
@@ -143,7 +140,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" target="_self">
+                <a href="./html/MaquinaCosturaColunaAgulha08.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina003.svg" alt="icon de maquina de pesponto">
@@ -153,7 +150,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" target="_self">
+                <a href="./html/MaquinaCosturaColunaAgulha09.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina004.svg" alt="icon de maquina de pesponto">
@@ -163,7 +160,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" target="_self">
+                <a href="./html/MaquinaCosturaColunaAgulha10.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina005.svg" alt="icon de maquina de pesponto">
