--- a/html/zigzag.html
+++ b/html/zigzag.html
@@ -15,7 +15,7 @@
     </header>
     <div class="hrMenu"></div>
     <section class="sectionMaquina">
-        <img class="imgMaquina" src="../img/logoSenaiAZul.svg" alt="logo do SENAI azul">
+        <img class="imgMaquina" src="../img/logoSenaiAzul.svg" alt="logo do SENAI azul">
         <div class="divMaquina">
             <video class="videoMaquina" src="../video/maquinazigzag.mp4" controls loop preload ></video>
         </div>
