--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" target="_self">
+                <a href="./html/zigzag.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina002.svg" alt="icon de maquina de pesponto">
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                 </a>
-                <a href=""MaquinaCosturaColunaAgulhaEletronica.html target="_self">
+                <a href="MaquinaCosturaColunaAgulhaEletronica.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina004.svg" alt="icon de maquina de pesponto">
@@ -140,7 +140,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="./html/MaquinaCosturaColunaAgulha08.html" target="_self">
+                <a href="./html/MaquinaCosturaColunaAgulha09.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina003.svg" alt="icon de maquina de pesponto">
@@ -150,7 +150,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="./html/MaquinaCosturaColunaAgulha09.html" target="_self">
+                <a href="./html/MaquinaCosturaColunaAgulha10.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina004.svg" alt="icon de maquina de pesponto">
@@ -160,7 +160,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="./html/MaquinaCosturaColunaAgulha10.html" target="_self">
+                <a href="./html/MaquinaCosturaColunaAgulha11.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina005.svg" alt="icon de maquina de pesponto">
