--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="./html/zigzag.html" target="_self">
+                <a href="./html/zigzag01.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina002.svg" alt="icon de maquina de pesponto">
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="MaquinaCosturaColunaAgulhaEletronica.html" target="_self">
+                <a href="./html/MaquinaCosturaColunaAgulhaEletronica.html" target="_self">
                     <div class="divIconMenu">
                         <div class="divImgIcon">
                             <img class="imgIcon" src="./img/iconMaquina004.svg" alt="icon de maquina de pesponto">
